# SPL1

./: Agent.cpp  Agent.h  CMakeLists.txt  Contact_Tracer.cpp  CycleTree.cpp  Graph.cpp  Graph.h  Json.cpp  MaxRankTree.cpp  RootTree.cpp  Session.cpp  Session.h  Tree.cpp  Tree.h  clion-log.txt  config2.json  main.cpp  makefile.txt
include/: Agent.h  Graph.h  Session.h  Tree.h
source files/: Agent.cpp  Contact_Tracer.cpp  CycleTree.cpp  Graph.cpp  Json.cpp  MaxRankTree.cpp  RootTree.cpp  Session.cpp  Tree.cpp  virus.cpp
src/: Agent.cpp  Graph.cpp  Session.cpp  Tree.cpp  main.cpp
